trying to fix horizontal scroll

--- a/assets/css/melpdesigns.css
+++ b/assets/css/melpdesigns.css
@@ -420,7 +420,7 @@ p.link-anim:focus {
     #main-page #home-title {
       font-size: 4.5rem; } }
 .portfolio-page {
-  overflow-x: hidden; }
+  overflow-x: hidden !important; }
   .portfolio-page .back-btn {
     z-index: 10;
     margin-top: -15px; }
