--- a/assets/scss/_portfolio-pages.scss
+++ b/assets/scss/_portfolio-pages.scss
@@ -1,6 +1,6 @@
 // Portfolio Pages Styling
 .portfolio-page {
-	overflow-x:hidden;
+	overflow-x:hidden !important;
 	.back-btn {
 		z-index:10;
 		margin-top:-15px;
